--- a/src/components/Chart/styles.module.css
+++ b/src/components/Chart/styles.module.css
@@ -25,3 +25,20 @@
     height: 2px;
     width: 100%;
 }
+
+.MonthLabels {
+    position: absolute;
+    max-width: 850px;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    bottom: 20px;
+    margin-left: 10px;
+}
+
+.MonthLabels span {
+    font-size: 10px;
+    color: #cecece;
+    font-weight: 400;
+}
