--- a/src/components/SettingsList/style.module.css
+++ b/src/components/SettingsList/style.module.css
@@ -25,7 +25,7 @@
     line-height: 22px;
 }
 
-.Settings button {
+.Settings .Button {
     color: #FF8702;
     font-size: 18px;
     font-weight: 700;
