--- a/src/pages/Filter/style.module.css
+++ b/src/pages/Filter/style.module.css
@@ -276,6 +276,14 @@
     color: #23232B;
 }
 
+.MiniDescription {
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 16.37px;
+    color: #23232B;
+    max-width: 330px;
+}
+
 @media screen and (max-width: 768px) {
     .Page {
         padding: 0;
