--- a/src/index.css
+++ b/src/index.css
@@ -159,3 +159,7 @@ html {
 .xM8CBkrn0wtFOdOP84Bb input {
   width: 100% !important;
 }
+
+.j9ygOVxEl2nClTPs77Ta {
+  padding: 150px 0 !important;
+}
