--- a/src/pages/Client/style.module.css
+++ b/src/pages/Client/style.module.css
@@ -1,6 +1,6 @@
 .Page {
-    max-width: 1300px;
-    padding: 40px 0;
+    max-width: 1330px;
+    padding: 40px 15px;
     width: 100%;
     margin: 0 auto;
     display: flex;
@@ -210,4 +210,23 @@
     color: #AFABA8;
     font-size: 14px;
     font-weight: 400;
+}
+
+@media screen and (max-width: 768px) {
+    .Page {
+        padding: 0;
+        padding-bottom: 100px;
+    }
+
+    .Section {
+        padding: 0;
+        box-shadow: none;
+        flex-direction: column;
+        gap: 20px;
+        padding: 0 15px;
+    }
+
+    .Top {
+        padding: 20px 0;
+    }
 }
