--- a/src/pages/Psych/Wallet/style.module.css
+++ b/src/pages/Psych/Wallet/style.module.css
@@ -1,6 +1,6 @@
 .Page {
-    max-width: 1300px;
-    padding: 40px 0;
+    max-width: 1330px;
+    padding: 40px 15px;
     width: 100%;
     margin: 0 auto;
     display: flex;
@@ -21,6 +21,12 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+}
+
+.Top .Back {
+    display: none;
+    width: 28px;
+    height: 28px;
 }
 
 .Grid {
@@ -106,6 +112,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    z-index: 100;
 }
 
 .ModalBox {
@@ -182,4 +189,34 @@
     font-weight: 700;
     font-size: 20px;
     color: #23232B;
+}
+
+@media screen and (max-width: 768px) {
+    .Page {
+        padding: 0;
+        padding-bottom: 100px;
+    }
+
+    .Section {
+        padding: 0;
+        box-shadow: none;
+        flex-direction: column;
+        gap: 20px;
+        padding: 0 15px;
+    }
+
+    .Top .Back {
+        display: flex;
+    }
+
+    .Top {
+        padding: 20px 0;
+        color: #AFABA8;
+    }
+}
+
+@media screen and (max-width: 700px) {
+    .Grid {
+        grid-template-columns: repeat(1, 1fr);
+    }
 }
