--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,7 @@ body,
 html {
   max-width: 100%;
   overflow-x: hidden;
-  overflow-y: scroll;
+  /* overflow-y: scroll; */
 }
 
 ::-webkit-scrollbar {
