--- a/src/pages/Create/style.module.css
+++ b/src/pages/Create/style.module.css
@@ -266,9 +266,36 @@
     color: #FF8702;
 }
 
+.Column ul {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    list-style: none;
+    padding: 0 0 40px 0;
+    gap: 10px;
+}
+
+.Column ul li {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    font-weight: 600;
+}
+
+.Column ul li svg {
+    width: 24px;
+    min-width: 24px;
+    color: #FF8702;
+    height: 24px;
+    cursor: pointer;
+}
+
 @media screen and (max-width: 600px) {
     .Box {
-        display: none;
+        /* display: none; */
+        box-shadow: none;
+        padding: 0;
     }
 
     .MobileBox {
@@ -277,6 +304,9 @@
 
     .Page {
         padding-top: 20px;
-        height: 100vh;
+    }
+
+    .GroupItem {
+        flex-direction: column;
     }
 }
