--- a/src/pages/Psych/Profile/style.module.css
+++ b/src/pages/Psych/Profile/style.module.css
@@ -30,6 +30,7 @@
     align-items: center;
     flex-direction: column;
     gap: 12px;
+    position: relative;
 }
 
 .Avatar {
@@ -89,14 +90,35 @@
     font-size: 16px;
 }
 
+.InputListBox {
+    border-radius: 100px;
+    border: 1px solid #BCBCBF;
+    overflow: hidden;
+}
+
 .InputList {
     width: 100%;
-    height: 40px;
-    border: 1px solid #BCBCBF;
-    border-radius: 100px;
+    height: auto;
     display: flex;
     align-items: center;
     padding: 0 16px;
+    gap: 5px;
+    max-width: 405px;
+    overflow-x: scroll;
+}
+
+.InputList::-webkit-scrollbar {
+    height: 3px;
+    position: absolute;
+    top: 0;
+}
+
+.InputList input {
+    width: 100%;
+    height: 38px;
+    background: transparent;
+    border: none;
+    min-width: 100px;
 }
 
 .Memo {
@@ -154,6 +176,25 @@
 .MobileHeader div {
     width: 28px;
     height: 28px;
+}
+
+.Disabled,
+.Disabled input {
+    cursor: not-allowed;
+}
+
+.DeleteAccount {
+    margin-top: -25px;
+    align-self: center;
+    height: 44px;
+    border-radius: 100px;
+    background: #FB5935;
+    border: none;
+    cursor: pointer;
+    color: #fff;
+    width: 100%;
+    font-size: 16px;
+    font-weight: 700;
 }
 
 @media screen and (max-width: 768px) {
