--- a/src/pages/Specialists/style.module.css
+++ b/src/pages/Specialists/style.module.css
@@ -71,7 +71,7 @@
 
 .InfoBox {
     display: flex;
-    align-items: center;
+    align-items: flex-start;
     gap: 40px;
     position: relative;
 }
@@ -82,10 +82,13 @@
     max-width: 375px;
     border-radius: 20px;
     overflow: hidden;
+    height: 420px;
 }
 
 .ImageBox img {
     width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 .ImageBox svg {
@@ -242,12 +245,14 @@
     left: -20px;
     z-index: 10;
     box-shadow: 2px 4px 10px 0px #B6A1C01C;
+    align-self: center;
 }
 
 .InfoBox button:last-child {
     position: absolute;
     right: -20px;
     z-index: 10;
+    align-self: center;
 }
 
 .TextBoxBottom p {
