--- a/src/index.css
+++ b/src/index.css
@@ -161,3 +161,32 @@ html {
 .j9ygOVxEl2nClTPs77Ta {
   padding: 150px 0 !important;
 }
+
+.AmKXNJUm0SmWgO90daLW label,
+.AmKXNJUm0SmWgO90daLW input,
+.L6vIrmD0q9g5Yu2h6ofV,
+.PjZU9le5rmfViWeAvvRH {
+  display: none;
+}
+
+.AmKXNJUm0SmWgO90daLW,
+.gxxR6ODqyJjd8U9gRbae {
+  width: 100%;
+}
+
+.AmKXNJUm0SmWgO90daLW button {
+  width: 100% !important;
+  max-width: 550px !important;
+  margin: 0 auto !important;
+  border-radius: 100px !important;
+  background: #FF8702 !important;
+}
+
+.kdokPV9jgsyFtd2e8Ek2 .sKtK1LFA_jOcb1MuqFNo {
+  background: transparent !important;
+  border: none !important;
+}
+
+.pVo6XoSfywa4eLk9ef2S {
+  max-height: 551px;
+}
