--- a/src/components/VideoCall/style.module.css
+++ b/src/components/VideoCall/style.module.css
@@ -42,3 +42,21 @@
 .MessageButton svg {
     width: 20px;
 }
+
+@media screen and (max-width: 1160px) {
+    .Section {
+        margin: 0;
+        width: 100%;
+        height: 100vh;
+        top: 0;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        border-radius: 0;
+    }
+
+    .MessageButton {
+        top: 20px;
+        right: 20px;
+    }
+}
