--- a/src/components/SupportService/style.module.css
+++ b/src/components/SupportService/style.module.css
@@ -1,92 +1,15 @@
-.Avatars {
-    display: flex;
-    align-items: center;
-    gap: 12px;
-}
-
-.Avatars img {
-    width: 30px;
-    height: 30px;
-    border-radius: 100%;
-}
-
 .SupportService {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    position: relative;
-    justify-content: space-between;
-    align-items: center;
-    height: 520px;
-}
-
-.HelloBox {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 15px;
-}
-
-.HelloBox p {
-    color: #AFABA8;
-    font-size: 14px;
-    font-weight: 400;
-    line-height: 16px;
-}
-
-.Input {
-    background: #FF87021A;
-    width: 100%;
-    padding: 17px 20px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    gap: 10px;
-}
-
-.Input input {
-    width: 100%;
-    height: 33px;
-    border-radius: 100px;
-    border: none;
-    background: #fff;
-    font-size: 14px;
-    font-weight: 400;
-    line-height: 10px;
-    padding: 0 15px;
-}
-
-.Input>svg {
-    color: #FF8702;
-}
-
-.Input button {
-    min-width: 30px;
-    height: 30px;
-    border-radius: 100%;
-    background: #FF8702;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border: none;
-    cursor: pointer;
-    transition: 0.5s;
-}
-
-.Input button svg {
-    transform: rotate(-90deg);
-    color: #fff !important;
-    width: 16px;
-    height: 16px;
-}
-
-.Input button:hover {
-    opacity: 0.7;
+    padding: 0 55px;
+    padding-bottom: 75px;
 }
 
 @media screen and (max-width: 768px) {
     .SupportService {
+        padding: 0;
         height: 100%;
-        min-height: calc(100vh - 100px);
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+        justify-content: space-between;
     }
 }
