--- a/src/pages/Support/style.module.css
+++ b/src/pages/Support/style.module.css
@@ -44,7 +44,8 @@
 @media screen and (max-width: 768px) {
     .Page {
         padding: 0;
-        padding-bottom: 100px;
+        min-height: calc(100vh - 70px);
+        margin-bottom: 100px;
     }
 
     .Section {
@@ -53,10 +54,10 @@
         flex-direction: column;
         gap: 20px;
         padding: 0 15px;
+        min-height: 100%;
     }
 
     .Top {
-        justify-content: flex-start;
         gap: 10px;
         padding-top: 20px;
     }
@@ -64,5 +65,17 @@
     .Top h2 {
         font-size: 16px;
         color: #BCBCBF;
+    }
+
+    .Section button {
+        width: 100%;
+    }
+
+    .Form {
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+        justify-content: space-between;
+        height: 100%;
     }
 }
