--- a/src/pages/Client/style.module.css
+++ b/src/pages/Client/style.module.css
@@ -115,20 +115,7 @@
     gap: 20px;
 }
 
-.ThemesList {
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-}
-
-.ThemesList div {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-}
-
-.ThemesList div ul {
+.ThemesList ul {
     width: 100%;
     flex-wrap: wrap;
     display: flex;
@@ -140,12 +127,6 @@
     color: #23232B;
     font-size: 16px;
     font-weight: 800;
-}
-
-.ThemesList div h3 {
-    color: #23232B;
-    font-size: 14px;
-    font-weight: 700;
 }
 
 .ThemesList ul li {
