--- a/src/components/VideoCall/style.module.css
+++ b/src/components/VideoCall/style.module.css
@@ -14,7 +14,8 @@
     left: 50%;
     transform: translateX(-50%);
     z-index: 100;
-    margin-left: 150px;
+    margin-left: 160px;
+    padding: 40px 55px;
 }
 
 .Section>div {
@@ -43,6 +44,63 @@
     width: 20px;
 }
 
+.Top {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    gap: 20px;
+}
+
+.Top svg {
+    width: 24px;
+    height: 24px;
+    color: #D9D9D9;
+    cursor: pointer;
+}
+
+.Top h2 {
+    font-size: 23px;
+    font-weight: 800;
+    line-height: 22px;
+    color: #23232B;
+}
+
+.Box {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 50px;
+    width: 100%;
+}
+
+.Box p {
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 22px;
+    color: #23232B;
+}
+
+.Box .Column {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+}
+
+.Box .Column h4 {
+    font-size: 18px;
+    font-weight: 700;
+    line-height: 22px;
+    color: #23232B;
+}
+
+.Box .Column h3 {
+    font-size: 48px;
+    font-weight: 700;
+    line-height: 22px;
+    color: #23232B;
+}
+
 @media screen and (max-width: 1160px) {
     .Section {
         margin: 0;
@@ -58,5 +116,30 @@
     .MessageButton {
         top: 20px;
         right: 20px;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .Top {
+        width: 100%;
+        justify-content: space-between;
+    }
+
+    .Top svg {
+        width: 30px;
+        height: 30px;
+    }
+
+    .Top span {
+        width: 30px;
+    }
+
+    .Empty {
+        display: flex;
+    }
+
+    .Section {
+        padding: 20px;
+        justify-content: flex-start;
     }
 }
