--- a/src/components/VideoCall/style.module.css
+++ b/src/components/VideoCall/style.module.css
@@ -143,4 +143,16 @@
         padding: 20px;
         justify-content: flex-start;
     }
+
+    .VideoCall {
+        height: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .Video {
+        width: 100%;
+        height: 100%;
+    }
 }
