--- a/src/components/VideoCall/style.module.css
+++ b/src/components/VideoCall/style.module.css
@@ -125,7 +125,7 @@
     .Section {
         margin: 0;
         width: 100%;
-        height: 100vh;
+        height: calc(var(--vh, 1vh) * 100);
         top: 0;
         display: flex;
         align-items: center;
