--- a/src/pages/Test/style.module.css
+++ b/src/pages/Test/style.module.css
@@ -95,11 +95,11 @@
   border-radius: 100px;
 }
 
-.Controlls div:nth-child(2) > div {
+.Controlls div:nth-child(2)>div {
   background: #fff;
 }
 
-.Controlls div:nth-child(2) > p {
+.Controlls div:nth-child(2)>p {
   display: none;
 }
 
@@ -179,13 +179,13 @@
 
   .Container {
     justify-content: space-between;
-    height: 100vh;
+    height: calc(var(--vh, 1vh) * 100);
     padding: 0;
   }
 
   .Page {
-    min-height: 100vh;
-    max-height: 100vh;
+    min-height: calc(var(--vh, 1vh) * 100);
+    max-height: calc(var(--vh, 1vh) * 100);
   }
 
   .Top,
