--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,7 @@
 
 :root {
   --vh: 100%;
+  --scroll-y: 0px;
 }
 
 * {
@@ -20,6 +21,24 @@ a {
 body,
 html {
   max-width: 100%;
+  overflow: hidden;
+  height: 100%;
+}
+
+.App {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: calc(var(--scroll-y) * -1);
+  left: 0;
+  overflow: hidden;
+}
+
+.Content {
+  overflow-y: scroll;
+  height: 100%;
+  position: relative;
+  box-sizing: content-box;
 }
 
 ::-webkit-scrollbar {
@@ -193,4 +212,45 @@ html {
 
 .pVo6XoSfywa4eLk9ef2S {
   max-height: 551px;
+}
+
+@media (min-width: 1024px) {
+  ::-webkit-scrollbar {
+    width: 8px;
+  }
+
+  ::-webkit-scrollbar-track {
+    background: rgba(0, 0, 0, 0.05);
+  }
+
+  ::-webkit-scrollbar-thumb {
+    background: rgba(0, 0, 0, 0.2);
+    border-radius: 30px;
+  }
+
+  ::-webkit-scrollbar-thumb:hover {
+    background: rgba(0, 0, 0, 0.3);
+  }
+
+  body {
+    overflow-y: scroll;
+    position: fixed;
+    top: calc(var(--scroll-y, 0) * -1);
+    width: 100%;
+  }
+}
+
+@media (max-width: 1023px) {
+
+  /* Reset scrollbar styles for mobile */
+  ::-webkit-scrollbar {
+    width: 0;
+    background: transparent;
+  }
+
+  /* Enable natural scrolling for mobile */
+  body {
+    position: static;
+    overflow-y: auto;
+  }
 }
