--- a/src/pages/Psych/FAQ/style.module.css
+++ b/src/pages/Psych/FAQ/style.module.css
@@ -29,6 +29,13 @@
     height: 28px;
 }
 
+.List {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+}
+
 @media screen and (max-width: 768px) {
     .Page {
         padding: 0;
