--- a/src/components/FaqItem/style.module.css
+++ b/src/components/FaqItem/style.module.css
@@ -14,6 +14,12 @@
     transition: 0.5s;
 }
 
+.Select.isFaq {
+    font-size: 18px;
+    height: 60px;
+    line-height: 120%;
+}
+
 .Select svg path {
     fill: #fff;
 }
@@ -38,6 +44,7 @@
     font-size: 20px;
     font-weight: 400;
     line-height: 24px;
+    white-space: pre-wrap;
 }
 
 .Item.Active .DropDown {
@@ -53,6 +60,11 @@
     .Select {
         font-size: 16px;
         line-height: 18px;
+    }
+
+    .Select.isFaq {
+        height: auto;
+        padding: 15px 30px;
     }
 
     .DropDown {
