--- a/src/pages/Psych/Wallet/style.module.css
+++ b/src/pages/Psych/Wallet/style.module.css
@@ -228,6 +228,10 @@
     opacity: 0.5;
 }
 
+.ConnectPayment div {
+    max-width: 500px;
+}
+
 @media screen and (max-width: 768px) {
     .Page {
         padding: 0;
